@@ -140,30 +140,6 @@ message GetQueueUserAclsInfoResponseProto {
 }
 
 
-message GetDelegationTokenRequestProto {
-  optional string renewer = 1; 
-}
-
-message GetDelegationTokenResponseProto {
-  optional hadoop.common.TokenProto application_token = 1;
-}
-
-message RenewDelegationTokenRequestProto {
-  required hadoop.common.TokenProto delegation_token = 1;
-}
-
-message RenewDelegationTokenResponseProto {
-  required int64 next_expiry_ts = 1;
-}
-
-message CancelDelegationTokenRequestProto {
-  required hadoop.common.TokenProto delegation_token = 1;
-}
-
-message CancelDelegationTokenResponseProto {
-}
-  
-
 //////////////////////////////////////////////////////
 /////// client_NM_Protocol ///////////////////////////
 //////////////////////////////////////////////////////
